horizontal scroll fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,9 +12,14 @@ header{
 }
 .one{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
 }
+
+.one img{
+    margin-left: auto;
+}
+
 #h3{
     margin-left: 497px;
 
@@ -44,10 +49,9 @@ color: white;
 font-weight: bold;
 border-radius: 5px;
 cursor: pointer;
+font-size: large;
 }
 
-/* --------------------------------------------------
-   Carrossel de cards
 
 .carousel{
     width: 100%;
@@ -71,7 +75,7 @@ cursor: pointer;
     width: 200px;
     height: 100px;
 
-    border: 2px solid black;
+    border: 1px solid rgb(184, 182, 182);
     border-radius: 20px;
 
     display: flex;
@@ -84,7 +88,7 @@ cursor: pointer;
         transform: translateX(0);
     }
     to{
-        transform: translateX(-20%);
+        transform: translateX(-50%);
     }
 }
 
